--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,3 +118,29 @@
 .summary-item>img{
   margin-top: 5%;
 }
+
+.shipping{
+  margin-left: 30%;
+  width: 35%;
+  /* background-color: #4caf50; */
+  /* text-align: center; */
+
+
+
+}
+.shipping>form{
+  width: 400px;
+  /* background-color: aqua; */
+}
+.shipping>form>label{
+  /* margin-left: -30px; */
+}
+.shipping>form>input{
+  width: 100%;
+
+  
+  position: relative;
+  padding: 7px 7px;
+
+
+}
