--- a/client/src/index.css
+++ b/client/src/index.css
@@ -175,3 +175,12 @@
   border-radius: 0.5rem;
   background-color: rgb(216, 218, 219);
 }
+
+.checkout{
+  margin-top: 3%;
+  border: 2px solid rgb(204, 202, 202);
+  width: 33%;
+  border-radius: 0.5rem;
+  background-color: rgb(216, 218, 219);
+  margin-left: 30%;
+}
